--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,12 @@
     <head>
         <meta charset="UTF-8" />
 
-        <title>Fake Project</title>
+        <title>Faker Project</title>
     </head>
     <body>
         <div id="root">
             <h1>Running!</h1>
-            <section id="user">
-                
-            </section>
+            <section id="user"></section>
         </div>
         <script src="./js/main.js" type="module"></script>
     </body>
