--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link
+            href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css"
+            rel="stylesheet"
+        />
 
         <title>Faker Project</title>
     </head>
