--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
             rel="stylesheet"
         />
 
-        <title>Faker Project</title>
+        <title>Faker.JS Project</title>
     </head>
     <body>
         <div id="root">
