--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link
-            href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css"
-            rel="stylesheet"
-        />
 
-        <title>Faker.JS Project</title>
+        <title>Fake Project</title>
     </head>
     <body>
         <div id="root">
             <h1>Running!</h1>
-            <section id="user"></section>
+            <section id="user">
+                
+            </section>
         </div>
         <script src="./js/main.js" type="module"></script>
     </body>
