--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,23 @@
         <title>Faker.JS Project</title>
     </head>
     <body>
-        <div id="root">
-            <h1>Running!</h1>
-            <section id="user"></section>
-            <section id="mapContainer"></section>
+        <div id="root" class="relative w-screen h-screen">
+            <header class="header">
+                <h1>Project In-Progress</h1>
+                <section id="user" class="userCard"></section>
+                <section
+                    id="mapContainer"
+                    class="absolute w-screen h-screen top-0"
+                ></section>
+            </header>
         </div>
+
         <script src="./js/main.js" type="module"></script>
     </body>
 </html>
+
+<!-- <div id="root">
+    <h1>Faker.js Project</h1>
+    <section id="user"></section>
+    <section id="mapContainer"></section>
+</div> -->
