--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
             <header class="header">
                 <h1>Project In-Progress</h1>
                 <section id="user" class="userCard"></section>
-                <section
+                <!-- <section
                     id="mapContainer"
                     class="absolute w-screen h-screen top-0"
-                ></section>
+                ></section> -->
             </header>
         </div>
 
